--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="max-w-6xl mx-auto px-6 py-4 flex items-center justify-between">
       <a href="#hero" class="flex items-center gap-3">
         <!-- Replace the src with your actual logo file (e.g. assets/elepfand-logo.png) -->
-        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAABAAAAAQACAIAAADwf7zUAADiM2NhQlgAAOIzanVtYgAAAB5qdW1kYzJwYQARABCAAACqADibcQNjb25") }]} alt="Elepfand Logo" class="w-12 h-12 rounded-md" onerror="this.style.display='none'">
+        <img src="elepfand.png") }]} alt="Elepfand Logo" class="w-12 h-12 rounded-md" onerror="this.style.display='none'">
         <span class="font-extrabold text-xl" style="color:var(--ele-dark)">Elepfand</span>
       </a>
       <nav class="hidden md:flex gap-6 items-center text-sm">
@@ -67,7 +67,7 @@
       <!-- App mockup / hero image placeholder -->
       <div class="w-80 h-80 bg-gradient-to-br from-blue-50 to-green-50 rounded-3xl flex items-center justify-center shadow-lg">
         <div class="text-center">
-          <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAABAAAAAQACAIAAADwf7zUAADiM2NhQlgAAOIzanVtYgAAAB5qdW1kYzJwYQARABCAAACqADibcQNjb25") }]} alt="Elepfand Logo" class="mx-auto w-36 h-36" onerror="this.style.display='none'">
+          <img src="elepfand.png") }]} alt="Elepfand Logo" class="mx-auto w-36 h-36" onerror="this.style.display='none'">
           <p class="mt-4 text-sm text-gray-500">Logo / App Mockup</p>
         </div>
       </div>
@@ -160,3 +160,4 @@
   </script>
 </body>
 </html>
+
