--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="max-w-6xl mx-auto px-6 py-4 flex items-center justify-between">
       <a href="#hero" class="flex items-center gap-3">
         <!-- Replace the src with your actual logo file (e.g. assets/elepfand-logo.png) -->
-        <img src="elepfand.png") }]} alt="Elepfand Logo" class="w-12 h-12 rounded-md" onerror="this.style.display='none'">
+        <img src="elepfand.PNG") }]} alt="Elepfand Logo" class="w-12 h-12 rounded-md" onerror="this.style.display='none'">
         <span class="font-extrabold text-xl" style="color:var(--ele-dark)">Elepfand</span>
       </a>
       <nav class="hidden md:flex gap-6 items-center text-sm">
