--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </div>
     </div>
 
-    <div class="border-t border-gray-100 py-4 text-sm text-center text-gray-500">© 2025 Elepfand — Built with ♻️ & Elefant-Charme</div>
+    <div class="border-t border-gray-100 py-4 text-sm text-center text-gray-500">© 2025 Elepfand — Built with ♻️ & Elefant-Charme [Thomas Hesse]</div>
   </footer>
 
   <!-- Small script for interactive placeholders -->
