--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <!-- App mockup / hero image placeholder -->
       <div class="w-80 h-80 bg-gradient-to-br from-blue-50 to-green-50 rounded-3xl flex items-center justify-center shadow-lg">
         <div class="text-center">
-          <img src="elepfand.png") }]} alt="Elepfand Logo" class="mx-auto w-36 h-36" onerror="this.style.display='none'">
+          <img src="elepfand.PNG") }]} alt="Elepfand Logo" class="mx-auto w-36 h-36" onerror="this.style.display='none'">
           <p class="mt-4 text-sm text-gray-500">Logo / App Mockup</p>
         </div>
       </div>
