--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   <section id="map" class="max-w-6xl mx-auto px-6 py-12">
     <h2 class="text-2xl font-bold">Rückgabestellen</h2>
     <p class="mt-2 text-gray-600">Karte folgt — wir fügen deine Stadt als nächstes hinzu.</p>
-    <div class="mt-6 h-64 bg-white rounded-lg shadow-sm flex items-center justify-center text-gray-400">[Karten-Widget / Mapbox oder Google Maps Integration hier einbauen]</div>
+    <div class="mt-6 h-64 bg-white rounded-lg shadow-sm flex items-center justify-center text-gray-400"><iframe class="w-full h-full rounded-lg" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2511.159267588901!2d7.628202276788213!3d51.96251097971316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b9ba827b76953f%3A0xdeaaf0c12597c7c5!2sM%C3%BCnster!5e0!3m2!1sde!2sde!4v0000000000000"></iframe></div>
   </section>
 
   <!-- Contact / Footer -->
@@ -150,7 +150,7 @@
       </div>
     </div>
 
-    <div class="border-t border-gray-100 py-4 text-sm text-center text-gray-500">© 2025 Elepfand — Built with ♻️ & Elefant-Charme [Thomas Hesse]</div>
+    <div class="border-t border-gray-100 py-4 text-sm text-center text-gray-500">© 2025 Elepfand — Built with ♻️ & Elefant-Charme</div>
   </footer>
 
   <!-- Small script for interactive placeholders -->
@@ -160,4 +160,3 @@
   </script>
 </body>
 </html>
-
