--- a/index.html
+++ b/index.html
@@ -169,18 +169,18 @@
     <div class="mt-6 grid md:grid-cols-3 gap-6">
       <div class="bg-white p-4 rounded-xl shadow-sm">
         <h4 class="font-semibold">Gratis Getränk</h4>
-        <p class="text-sm text-gray-600">Kosten: 50 Punkte</p>
+        <p class="text-sm text-gray-600">Kosten: 100 Punkte</p>
         <button data-cost="50" class="mt-3 px-4 py-2 bg-green-600 text-white rounded-lg buyBtn">Einlösen</button>
       </div>
 
       <div class="bg-white p-4 rounded-xl shadow-sm">
         <h4 class="font-semibold">Elepfand Thermobecher</h4>
-        <p class="text-sm text-gray-600">Kosten: 100 Punkte</p>
+        <p class="text-sm text-gray-600">Kosten: 700 Punkte</p>
         <button data-cost="100" class="mt-3 px-4 py-2 bg-green-600 text-white rounded-lg buyBtn">Einlösen</button>
       </div>
 
       <div class="bg-white p-4 rounded-xl shadow-sm">
-        <h4 class="font-semibold">Monatsabo ohne Pfand</h4>
+        <h4 class="font-semibold"></h4>
         <p class="text-sm text-gray-600">Kosten: 250 Punkte</p>
         <button data-cost="250" class="mt-3 px-4 py-2 bg-green-600 text-white rounded-lg buyBtn">Einlösen</button>
       </div>
