--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div id="badges" class="mt-3 flex gap-3 flex-wrap"></div>
       </div>
 
-      <div class="mt-6" id="elepfandPlusSection" class="hidden">
+      <div id="elepfandPlusSection" style="display:none;">
         <h4 class="font-semibold text-green-600">Elepfand+ Vorteile</h4>
         <ul class="mt-2 text-sm text-gray-700 list-disc list-inside">
           <li>Exklusive Events & Community-Challenges</li>
@@ -244,4 +244,5 @@ document.querySelectorAll('.buyBtn').forEach(b=>{
 </script>
 </body>
 </html>
+
 
